src/main/java/com/example/blog/_core/util/error/ex/Exception404.java
package com.example.blog._core.util.error.ex;

public class Exception404 extends RuntimeException {

    public Exception404(String msg) {
        super(msg);
    }
}
